--- a/cezara/axa.html
+++ b/cezara/axa.html
@@ -88,7 +88,7 @@
         <div class="text">
             <h2>2022</h2>
             <p>Aici stăteam pe telefon și ne uitam la TikTok-uri de-ale fetelor care se credeau vedete. Și din nimic, am
-                început să le parodiem. Dansam prost, vorbeam în slow-motion, râdeam de ne durea burta.
+                început să le parodiem. Dansam prost și râdeam de ne durea burta.
             </p>
         </div>
     </section>
